# ComfyUI_doubao_seed

./: README.md  SeedReam4_config.json  __init__.py  check_video_quality.py  comic_html_template.py  doubao_seed.py  install_pdf_support.bat  pyproject.toml  requirements.txt  requirements_face_restore.txt  test_text_generation.py
examples/: SeedReam4API_Single_example.json  SeedReam4API_Volcengine_example.json  SeedReam4API_example.json  豆包视频生成.json  豆包连环画创作.json
web/: comic_browser_viewer.js  comic_html_preview.js
