[project]
name = "ComfyUI_doubao_seed"
description = "ComfyUI is a collection of custom nodes focused on the Doubao ecosystem of the Volcano Engine, providing comprehensive AI content creation functions such as image generation, video generation, text generation, and comic strip creation.."
version = "1.2.0"
license = {file = "LICENSE"}
dependencies = []

[project.urls]
Repository = "https://github.com/xuchenxu168/ComfyUI_doubao_seed"
"Bug Tracker" = "https://github.com/xuchenxu168/ComfyUI_doubao_seed/issues"
#  Used by Comfy Registry https://registry.comfy.org

[tool.comfy]
PublisherId = "xuchenxu168"
DisplayName = "ComfyUI_doubao_seed"
Icon = ""
includes = []
